--- a/TelegramSheetBot/TelegramSheetBot.csproj
+++ b/TelegramSheetBot/TelegramSheetBot.csproj
@@ -31,4 +31,8 @@
       <PackageReference Include="Telegram.Bot" Version="18.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations" />
+    </ItemGroup>
+
 </Project>
